added AUTH0 middleware - success

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "dotenv": "^10.0.0",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.13",
     "mongoose-autopopulate": "^0.14.0",
     "reflect-metadata": "^0.1.13",
