--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^2.0.3",
