--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@algoan/nestjs-pagination": "^5.0.1",
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
@@ -28,6 +29,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "express-jwt": "^6.0.0",
     "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.13",
