--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^7.2.4",
+    "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.6.15",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
@@ -34,6 +35,8 @@
     "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.13",
     "mongoose-autopopulate": "^0.14.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
