--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jwks-rsa": "^2.0.3",
     "mongoose": "^5.12.13",
     "mongoose-autopopulate": "^0.14.0",
+    "mongoose-unique-validator": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
